# Yandex-Brown

./: CMakeLists.txt  little_tests.cpp
W1_ASOC_CONTAINERS/: CMakeLists.txt  custom_types_map.cpp  input.txt  map_exprs.cpp
W2_NAMESPACES_THIS/: CMakeLists.txt  ValueHolder.cpp  spendings_json.cpp
W3_SMART_POINTERS/: CMakeLists.txt  my_object_pool.cpp  my_object_pool_un_ptr.cpp  object_pool.cpp  object_pool_test.cpp  object_pool_unique_ptr.cpp  object_pool_unique_ptr_test.cpp  unique_ptr_exprs.cpp
W4_SHARED_WEAK_POINTERS/: CMakeLists.txt  shared_pointer_expr.cpp
